--- a/orc-web-app/package.json
+++ b/orc-web-app/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
+    "orc-web-app": "file:",
     "pdfjs-dist": "^4.5.136",
     "tesseract.js": "^4.1.1"
   }
